--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,38 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-js-hw-13-image-finder</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-      integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <!-- <include src="./partials/example.html"></include> -->
-    <include src="./partials/search.html"></include>
 
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-    <script src="./index.js"></script>
-  </body>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>goit-js-hw-13-image-finder</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+		integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
+		crossorigin="anonymous" />
+</head>
+
+<body>
+	<form class="form-inline search-form js-search-form">
+		<div class="form-group">
+			<label for="searchQuery" class="sr-only">Что ищем?</label>
+			<input type="text" class="form-control" name="query" id="searchQuery" placeholder="Что ищем?"
+				autocomplete="off" />
+		</div>
+		<button type="submit" class="btn btn-primary">Искать</button>
+	</form>
+
+	<ul class="articles js-articles-container"></ul>
+	<button type="button" class="btn btn-primary button" data-action="load-more">
+		<span class="spinner-border spinner-border-sm spinner is-hidden" role="status" aria-hidden="true"></span>
+
+		<span class="label">Показать ещё</span>
+	</button>
+
+
+
+	<!-- <include src="./partials/search.html"></include> -->
+
+	<!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+	<script src="./index.js"></script>
+</body>
+
 </html>
