--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Заголовок страницы</title>
+	<title>image-finder</title>
 	<link rel="stylesheet" href="../node_modules/basiclightbox/dist/basicLightbox.min.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
@@ -16,7 +16,6 @@
 	<include src="./partials/image-card.html"></include>
 
 	<script src="./index.js"></script>
-	<!-- <script src="../node_modules/basiclightbox/dist/basicLightbox.min.js"></script> -->
 </body>
 
 </html>
